--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,9 @@ root = true
 # Unix-style newlines with a newline ending every file
 [*]
 charset = utf-8
+indent_style = space
 end_of_line = lf
 insert_final_newline = true
 
 [*.{java}]
-indent_size = 4
+indent_size = 2
