--- a/core/json/build.gradle
+++ b/core/json/build.gradle
@@ -52,8 +52,10 @@ dependencies {
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
 
-  // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
-  implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+  // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
+
+
 
   // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
   implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.31'
