--- a/core/json/gradle.properties
+++ b/core/json/gradle.properties
@@ -1,3 +1,3 @@
-VERSION_NAME=0.1.0-TEST
-POM_NAME=core-json
-POM_ARTIFACT_ID=core-json
+# VERSION_NAME=0.1.0-TEST
+POM_NAME=core-number
+POM_ARTIFACT_ID=core-number
