--- a/core/json/build.gradle
+++ b/core/json/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
   // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
+
+  implementation project(':core:number')
 }
