--- a/build.gradle
+++ b/build.gradle
@@ -13,33 +13,44 @@ plugins {
   id "io.franzbecker.gradle-lombok" version '3.0.0' apply false
 }
 
-// subprojects.findAll {
-//   it.name in ['lib']
-// }.each { p ->
-//   configure(p) {
-//     apply plugin: 'java'
-//     apply plugin: 'eclipse'
-//     apply plugin: 'idea'
-//     apply plugin: 'java-library'
+subprojects.findAll {
+  it.name in ['lib']
+}.each { p ->
+  configure(p) {
+    apply plugin: 'java'
+    apply plugin: 'eclipse'
+    apply plugin: 'idea'
+    apply plugin: 'java-library'
+    apply plugin: "io.franzbecker.gradle-lombok"
     
-//     // apply from: "${project.rootDir}/deploy.gradle"
+    configurations {
+      developmentOnly
+      runtimeClasspath {
+        extendsFrom developmentOnly
+      }
+      compileOnly {
+        extendsFrom annotationProcessor
+      }
+    }
+    
+    apply from: "${project.rootDir}/deploy.gradle"
 
-//     dependencies {
-//       // Use JUnit test framework.
-//       testImplementation 'junit:junit:4.13.1'
+    dependencies {
+      // Use JUnit test framework.
+      testImplementation 'junit:junit:4.13.1'
 
-//       // This dependency is exported to consumers, that is to say found on their compile classpath.
-//       api 'org.apache.commons:commons-math3:3.6.1'
+      // This dependency is exported to consumers, that is to say found on their compile classpath.
+      api 'org.apache.commons:commons-math3:3.6.1'
 
-//       // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-//       implementation 'com.google.guava:guava:30.0-jre'
-//     }
+      // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+      implementation 'com.google.guava:guava:30.0-jre'
+    }
 
-//     group = GROUP
-//     sourceCompatibility = 1.8
-//     targetCompatibility = 1.8
-//   }
-// }
+    group = GROUP
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+  }
+}
 
 subprojects.findAll {
   it.path ==~ /^:core:(.*?)$/
